--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
+    "pusher-js": "^8.4.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-kakao-maps-sdk": "^1.2.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-quill-new": "^3.7.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
